# TetherInstaller

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  MakeRelease.ps1  NorthstarInstaller.sln  README.md  Setup.ps1  TetherInstaller.sln
.github/workflows/: build.yml  msbuild.yml
AppInstaller/: AppInstaller.aps  AppInstaller.exe.manifest  AppInstaller.vcxproj  AppInstaller.vcxproj.filters  CreateReleaseZip.ps1
AppInstaller/Source/: AppInstaller.aps  AppInstaller.cpp  AppInstaller.rc  Install.cpp  Install.h  resource.h
NorthstarInstaller/: NorthstarInstaller.vcxproj  NorthstarInstaller.vcxproj.filters  TetherInstaller  installer.aps  installer.rc  makefile  update.bat
NorthstarInstaller/Data/autojoin/: mod.json
NorthstarInstaller/Data/shaders/: postprocess.frag  text.frag  uishader.frag  uishader.vert
NorthstarInstaller/Data/translation/: de.json  en.json
NorthstarInstaller/Markup/: Common.kui  ModsTab.kui  Settings.kui  Sidebar.kui  Tab.kui  TitleBar.kui
NorthstarInstaller/Shaders/: postprocess.frag
NorthstarInstaller/Source/: AppUpdate.cpp  AppUpdate.h  BackgroundTask.cpp  BackgroundTask.h  Game.cpp  Game.h  Installer.cpp  Installer.h  Linux_PE.h  Log.cpp  Log.h  LogPanel.cpp  LogPanel.h  Networking.cpp  Networking.h  TetherPlugin.cpp  TetherPlugin.h  Thunderstore.cpp  Thunderstore.h  Translation.cpp  Translation.h  UIDef.cpp  UIDef.h  WindowFunctions.cpp  WindowFunctions.h
NorthstarInstaller/Source/Markup/: ImageButton.hpp  ModCategoryButton.hpp  ModEntry.hpp  (+8 more)
Release/: update.bat
Shared/miniz/: miniz.cpp  miniz.h
test/: TetherInstaller
(+29 files in other folders)
